Course Overview Accordion 17/11/2016 - Edit: Course Video Modal Added 21/11/2016 - All items aligned

--- a/courses-undergrad.html
+++ b/courses-undergrad.html
@@ -104,22 +104,22 @@
     <section class="panel">
         <section class="content">
             <section class="quick-view">
-                <p>Award:</p>
-                <p>Course Length:</p>
-                <p>Mode of Study:</p>
+                <p>Award: BSc (Hons)</p>
+                <p>Course Length: 2 Years</p>
+                <p>Mode of Study: Full-Time</p>
             </section>
 
             <section class="overview">
-                <p class="info"><!--First Paragraph--><br/><br/><!--Second Paragraph--></p>
+                <p class="info">This course will extend your existing skills in software and systems development, and equip you with advanced skills in web and mobile developments.<br/><br/>This course has been designed to meet the requirements of applicants whoo have completed a relevant HND in Computing, by providing s two-year top-up programme leading to an Honours degree.</p>
 
 
-                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-#" class="video-link" src="images/#-video.jpg" alt="Link to course video"></a>
+                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-asd" class="video-link" src="images/RGULogo.png" alt="Link to course video"></a>
 
-                <div id="modal-#" class="modal">
+                <div id="modal-asd" class="modal">
 
                     <div class="modal-content">
                         <span class="close">x</span>
-                        <iframe class="course-video" width="615" height="435" src="#embeded-video#" frameborder="0" allowfullscreen></iframe>
+                        <img class="course-video" width="615" height="435" src="images/video_unavailable.png">
                     </div>
 
                 </div>
@@ -129,11 +129,11 @@
 
 
             <section class="requirements">
-                <p><strong>Entry Requirements</strong><br/><!--grade--></p>
-                <p><strong>Advanced Entry</strong><br/><!--If Applicable--></p>
+                <p><strong>Entry Requirements</strong><br/>A relevant HND from one of our partner colleges.</p>
+                <p><strong>Advanced Entry</strong><br/>Applications for advanced entry are considered on an individual basis.</p>
             </section>
 
-            <a class="rgu-link" href="#">For more information please visit the Robert Gordon University website.</a>
+            <a class="rgu-link" href="http://www.rgu.ac.uk/computing/study-options/undergraduate-full-time/computing-application-software-development">For more information please visit the Robert Gordon University website.</a>
         </section>
     </section>
 
@@ -142,7 +142,37 @@
     </button>
     <section class="panel">
         <section class="content">
-            <p>Paragraph about the course...</p>
+            <section class="quick-view">
+                <p>Award: BSc (Hons)</p>
+                <p>Course Length: 4 Years</p>
+                <p>Mode of Study: Full Time</p>
+            </section>
+
+            <section class="overview">
+                <p class="info">Our Cyber Security degree provides you with the knowledge and skills to secure and protect critical information systems to the high professional standards demanded by industry.<br/><br/>You will study the different ways that computer siftware and hardware systems can be vunerable to attack and gain practical skills in how to defeat malicious threats.</p>
+
+
+                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-cyber" class="video-link" src="images/RGULogo.png" alt="Link to course video"></a>
+
+                <div id="modal-cyber" class="modal">
+
+                    <div class="modal-content">
+                        <span class="close">x</span>
+                        <img class="course-video" width="615" height="435" src="images/video_unavailable.png">
+                    </div>
+
+                </div>
+
+            </section>
+
+
+
+            <section class="requirements">
+                <p><strong>Entry Requirements</strong><br/>Scottish Higher: BBBC<br/>GSC A Level: BCC<br/>IB: 27</p>
+                <p><strong>Advanced Entry</strong><br/>Applications for advanced entry are considered on an individual basis.</p>
+            </section>
+
+            <a class="rgu-link" href="http://www.rgu.ac.uk/computing/study-options/undergraduate/cyber-security">For more information please visit the Robert Gordon University website.</a>
         </section>
     </section>
 
@@ -151,7 +181,37 @@
     </button>
     <section class="panel">
         <section class="content">
-            <p>Paragraph about the course...</p>
+            <section class="quick-view">
+                <p>Award: BSc (Hons)</p>
+                <p>Course Length: 4 Years</p>
+                <p>Mode of Study: Full-Time</p>
+            </section>
+
+            <section class="overview">
+                <p class="info">Bringing design, production and development together in the world of Digital Media provides an exciting future for graduates with this degree.<br/><br/>Combining creative design skills with a high level of technical ability ensures that employers are gaining the gradutes they require to take their companies to the next level.</p>
+
+
+                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-dm" class="video-link" src="images/digital-media.jpg" alt="Link to course video"></a>
+
+                <div id="modal-dm" class="modal">
+
+                    <div class="modal-content">
+                        <span class="close">x</span>
+                        <iframe class="course-video" width="615" height="435" src="https://www.youtube.com/embed/xg-P6Me0-ZE" frameborder="0" allowfullscreen></iframe>
+                    </div>
+
+                </div>
+
+            </section>
+
+
+
+            <section class="requirements">
+                <p><strong>Entry Requirements</strong><br/>Scottish Higher: BBBC<br/>GSC A Level: BCC<br/>IB: 27</p>
+                <p><strong>Advanced Entry</strong><br/>Applications for advanced entry are considered on an individual basis.</p>
+            </section>
+
+            <a class="rgu-link" href="http://www.rgu.ac.uk/computing/study-options/undergraduate-full-time/digital-media-design-production-and-development-bsc-hons">For more information please visit the Robert Gordon University website.</a>
         </section>
     </section>
 
