--- a/placement_main.html
+++ b/placement_main.html
@@ -9,23 +9,21 @@
  <main>
      <h1 id = "placement-title"> Industrial Placements</h1>
      <p>The aim of the industrial placement is to provide students with the opportunity to consolidate and broaden the knowledge they have gained in their studies. The working environment allows students to apply their academic knowledge and skills to a real world situation. By undertaking a placement during your studies, you will make valuable links with industry and have a definite advantage when you apply for graduate jobs. Placements allow students to use the skills they have developed while studying and build on them in a real world situation. The benefits for both employers and students are huge; students learn from working alongside professionals and employers benefit from a valuable resource with valuable skills, knowledge and fresh ideas. </p>
-     <div class="w3-content" style="max-width:800px">
-         <video width="420" height="300" class="mySlides" controls>
-             <source src="assets/images%20and%20videos/RGU%20Campus%20-%20Aerial%20View.mp4" type="video/mp4">
-         </video>
-         <video width="420" height="300" class="mySlides" controls>
-             <source src="assets/images%20and%20videos/Welcome%20to%20RGU.mp4" type="video/mp4">
-         </video>
-         <video width="420" height="300" class="mySlides" controls>
-             <source src="assets/images%20and%20videos/Talent%20Exchange%20-%20LR%20Senergy.mp4" type="video/mp4">
-         </video>
+     <div id="video" class="w3-content" style="max-width:800px">
          <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
+
+         <iframe class="mySlides" width="560" height="315" src="https://www.youtube.com/embed/k7jgtUomqxI" frameborder="0" allowfullscreen></iframe>
+         <iframe class="mySlides" width="560" height="315" src="https://www.youtube.com/embed/fEet1sWUuE0" frameborder="0" allowfullscreen></iframe>
+         <iframe class="mySlides" width="560" height="315" src="https://www.youtube.com/embed/Ps11CDkNS44" frameborder="0" allowfullscreen></iframe>
+
          <a class="w3-btn-floating w3-display-right" onclick="plusDivs(+1)">&#10095;</a>
      </div>
      <img id="graph" height="300" width="450" src="assets/images%20and%20videos/meta-chart.png">
+     <section id="info">
      <h3>Where are we?</h3>
      <p>The Placement Office for the Faculty of Design and Technology organises relevant opportunities for students who undertake a placement as part of the academic requirements of their course. We are located in Garthdee, in the small building next to Scott Sutherland School.</p>
      <p>The Office is open Monday to Thursday 09.00-17.00 and Friday 09.00-16.00. You can contact us by dropping in to the Office or by email to placement.destech@rgu.ac.uk or by phoning 01224 262344/ 262335/ 262433.</p>
+     </section>
  </main>
   <script src="slideshow.js" type="text/javascript"></script>
 </body>
