Index Page - Add Content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Image Links</title>
-    <link rel="stylesheet" type="text/css" href="linkstyle.css">
+    <link rel="stylesheet" type="text/css" href="css/linkstyle.css">
 </head>
 <body>
 
