Index Page - Add Content

--- a/footer.html
+++ b/footer.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <title>Footer</title>
 
-    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
 </head>
 
 <body>
 
     <center><div class="footerRule">
         <p id="footerText">Connect with us</p>
-        <a href="https://www.facebook.com/robertgordonuniversity"><img id= "icon"; title="Follow RGU on Facebook (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Facebook-Coloured.jpg';" onmouseout="this.src='facebook-uncoloured.png';" alt="Follow RGU on Facebook (opens in new window)" src="facebook-uncoloured.png"></a>
-        <a href="https://twitter.com/RobertGordonUni"><img id= "icon"; title="Follow RGU on Twitter (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Twitter-Coloured.jpg';" onmouseout="this.src='Twitter-Uncoloured.jpg';" alt="Follow RGU on Twitter (opens in new window)" src="Twitter-Uncoloured.jpg"></a>
-        <a href="https://www.youtube.com/c/robertgordonuniversity"><img id= "icon"; title="Follow RGU on Youtube (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Youtube-Coloured.jpg';" onmouseout="this.src='Youtube-Uncoloured.png';" alt="Follow RGU on Youtube (opens in new window)" src="Youtube-Uncoloured.png"></a>
-        <a href="https://www.linkedin.com/edu/school?id=12660"><img id= "icon"; title="Follow RGU on LinkedIn (opens in new window)" style="border: 0px;" onmouseover="this.src= 'LinkedIn-Coloured.jpg';" onmouseout="this.src='LinkedIn-Uncoloured.png';" alt="Follow RGU on LinkedIn (opens in new window)" src="LinkedIn-Uncoloured.png"></a>
-        <a href="https://plus.google.com/+robertgordonuniversity"><img id= "icon"; title="Follow RGU on Google+ (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Google-Plus-Coloured.jpg';" onmouseout="this.src='Google-Plus-Uncoloured.png';" alt="Follow RGU on Google+ (opens in new window)" src="Google-Plus-Uncoloured.png"></a>
-        <a href="https://www.instagram.com/robertgordonuni/"><img id= "icon"; title="Follow RGU on Instagram (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Instagram-Coloured.png';" onmouseout="this.src='Instagram-Uncoloured.png';" alt="Follow RGU on Instagram (opens in new window)" src="Instagram-Uncoloured.png"></a>
+        <a href="https://www.facebook.com/robertgordonuniversity"><img id= "icon"; title="Follow RGU on Facebook (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Facebook-Coloured.jpg';" onmouseout="this.src='facebook-uncoloured.png';" alt="Follow RGU on Facebook (opens in new window)" src="images/facebook-uncoloured.png"></a>
+        <a href="https://twitter.com/RobertGordonUni"><img id= "icon"; title="Follow RGU on Twitter (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Twitter-Coloured.jpg';" onmouseout="this.src='Twitter-Uncoloured.jpg';" alt="Follow RGU on Twitter (opens in new window)" src="images/Twitter-Uncoloured.jpg"></a>
+        <a href="https://www.youtube.com/c/robertgordonuniversity"><img id= "icon"; title="Follow RGU on Youtube (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Youtube-Coloured.jpg';" onmouseout="this.src='Youtube-Uncoloured.png';" alt="Follow RGU on Youtube (opens in new window)" src="images/Youtube-Uncoloured.png"></a>
+        <a href="https://www.linkedin.com/edu/school?id=12660"><img id= "icon"; title="Follow RGU on LinkedIn (opens in new window)" style="border: 0px;" onmouseover="this.src= 'LinkedIn-Coloured.jpg';" onmouseout="this.src='LinkedIn-Uncoloured.png';" alt="Follow RGU on LinkedIn (opens in new window)" src="images/LinkedIn-Uncoloured.png"></a>
+        <a href="https://plus.google.com/+robertgordonuniversity"><img id= "icon"; title="Follow RGU on Google+ (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Google-Plus-Coloured.jpg';" onmouseout="this.src='Google-Plus-Uncoloured.png';" alt="Follow RGU on Google+ (opens in new window)" src="images/Google-Plus-Uncoloured.png"></a>
+        <a href="https://www.instagram.com/robertgordonuni/"><img id= "icon"; title="Follow RGU on Instagram (opens in new window)" style="border: 0px;" onmouseover="this.src= 'Instagram-Coloured.png';" onmouseout="this.src='Instagram-Uncoloured.png';" alt="Follow RGU on Instagram (opens in new window)" src="images/Instagram-Uncoloured.png"></a>
     </div></center>
 
 </body>
