--- a/Contact Us Page_Final.html
+++ b/Contact Us Page_Final.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact_Us _Page</title>
-    <link rel="stylesheet" href="Contact_Us_Page.css"type="text/css">
+    <link rel="stylesheet" href="css/contact.css" type="text/css">
 </head>
 
 <body>
