Index Page - Full Content

--- a/News&TwitterFeed.html
+++ b/News&TwitterFeed.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>News&TwitterFeed</title>
-    <link rel="stylesheet" type="text/css" href="News&TwitterFeed.css">
-    <script src="News&TwitterFeed.js"></script>
-    <script>document.getElementById("defaultOpen").click();</script>
+    <link rel="stylesheet" type="text/css" href="css/News&TwitterFeed.css">
+    <!--<script src="js/News&TwitterFeed.js"></script>-->
+    <!--<script>document.getElementById("defaultOpen").click();</script>-->
 
 </head>
 <body>
