--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/footer.css">
 
     <script src="js/News&TwitterFeed.js"></script>
-    <script>document.getElementById("defaultOpen").click();</script>
+    <!--<script>document.getElementById("defaultOpen").click();</script>-->
 </head>
 <body>
 
@@ -159,28 +159,30 @@
             </section>
 
         </section>
+        <section id="find-us">
+            <section id="contact">
+                <h3 id="contacttitle">
+                    Contact Us
+                </h3>
+                <p>
+                    Sir Ian Wood Building <br/>
+                    Robert Gordon University <br/>
+                    Garthdee Road <br/>
+                    Aberdeen <br/>
+                    AB10 7GJ <br/>
+                    <br/>
+                    Email: csdm-office@rgu.ac.uk <br/>
+                    <br/>
+                    Tel: 44-(0)1224 262700
+                </p>
+            </section>
 
-        <section id="contact">
-            <h3 id="contacttitle">
-                Contact Us
-            </h3>
-            <p>
-                Sir Ian Wood Building <br/>
-                Robert Gordon University <br/>
-                Garthdee Road <br/>
-                Aberdeen <br/>
-                AB10 7GJ <br/>
-                <br/>
-                Email: csdm-office@rgu.ac.uk <br/>
-                <br/>
-                Tel: 44-(0)1224 262700
-            </p>
+            <section class="google-map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8664.362078406428!2d-2.1410221!3d57.1184161!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5d8969688e77366a!2sRobert+Gordon+University+Aberdeen%2C+Garthdee+Campus!5e0!3m2!1sen!2suk!4v1479890592261" width="360" height="270" frameborder="0" allowfullscreen></iframe>
+                </div>
+            </section>
         </section>
 
-        <section class="google-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d8664.362078406428!2d-2.1410221!3d57.1184161!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5d8969688e77366a!2sRobert+Gordon+University+Aberdeen%2C+Garthdee+Campus!5e0!3m2!1sen!2suk!4v1479890592261" width="360" height="270" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </section>
     </section>
     <section id="sidebar">
         <section class="rightTabs">
@@ -310,7 +312,7 @@
 
 
 <script type="text/javascript" src="js/nav.js"></script>
-
+<script>document.getElementById("defaultOpen").click();</script>
 
 </body>
 </html>
