--- a/placement_main.html
+++ b/placement_main.html
@@ -13,17 +13,18 @@
          <iframe class="mySlides" width="560" height="315" src="https://www.youtube.com/embed/k7jgtUomqxI" frameborder="0" allowfullscreen></iframe>
          <iframe class="mySlides" width="560" height="315" src="https://www.youtube.com/embed/fEet1sWUuE0" frameborder="0" allowfullscreen></iframe>
          <iframe class="mySlides" width="560" height="315" src="https://www.youtube.com/embed/Ps11CDkNS44" frameborder="0" allowfullscreen></iframe>
-
+    <section id="buttons">
          <a class="w3-btn-floating w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
          <a class="w3-btn-floating w3-display-right" onclick="plusDivs(+1)">&#10095;</a>
+    </section>
      </div>
-     <img id="graph" height="300" width="450" src="assets/images%20and%20videos/meta-chart.png">
      <section id="info">
+         <img id="graph" height="300" width="450" src="assets/images%20and%20videos/meta-chart.png">
      <h3>Where are we?</h3>
      <p>The Placement Office for the Faculty of Design and Technology organises relevant opportunities for students who undertake a placement as part of the academic requirements of their course. We are located in Garthdee, in the small building next to Scott Sutherland School.</p>
      <p>The Office is open Monday to Thursday 09.00-17.00 and Friday 09.00-16.00. You can contact us by dropping in to the Office or by email to placement.destech@rgu.ac.uk or by phoning 01224 262344/ 262335/ 262433.</p>
      </section>
+     <script src="slideshow.js" type="text/javascript"></script>
  </main>
-  <script src="slideshow.js" type="text/javascript"></script>
 </body>
 </html>
