Industrial Placement Page - Complete

--- a/course-overview.html
+++ b/course-overview.html
@@ -45,7 +45,7 @@
             <li>
                 <a href="#" class="menu-content">Our Courses</a>
                 <ul class="sub-menu">
-                    <li><a href="#">Undergraduate</a></li>
+                    <li><a href="course-overview.html">Undergraduate</a></li>
                     <li><a href="#">Postgraduate</a></li>
                     <li><a href="#">Research</a></li>
                     <li><a href="#">Part Time</a></li>
@@ -65,6 +65,7 @@
                     <li><a href="#">Bookings</a></li>
                     <li><a href="#">Software</a></li>
                     <li><a href="#">Staff Resources</a></li>
+                    <li><a href="placement.html">Industrial Placements</a></li>
                 </ul>
             </li>
             <li>
