Contact Page - Complete

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                 <a href="#" class="menu-content">News</a>
             </li>
             <li>
-                <a href="#" class="menu-content">Contact Us</a>
+                <a href="contact.html" class="menu-content">Contact Us</a>
             </li>
 
         </ul>
