--- a/news-main.html
+++ b/news-main.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>CSDM RGU</title>
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <link rel="stylesheet" type="text/css" href="css/index-style.css">
     <link rel="stylesheet" type="text/css" href="css/nav-style.css">
     <link rel="stylesheet" type="text/css" href="css/linkstyle.css">
@@ -12,8 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/news-style.css">
     <link rel="stylesheet" type="text/css" href="css/unsemantic-grid-responsive-tablet.css">
 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
 
     <meta  name="viewport"  content=" width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" /> 
 </head>
