Finalising Web Pages

--- a/assets/News&TwitterFeed.html
+++ b/assets/News&TwitterFeed.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>News&TwitterFeed</title>
-    <link rel="stylesheet" type="text/css" href="css/News&TwitterFeed.css">
+    <link rel="stylesheet" type="text/css" href="../css/News&TwitterFeed.css">
     <!--<script src="js/News&TwitterFeed.js"></script>-->
     <!--<script>document.getElementById("defaultOpen").click();</script>-->
 
