--- a/assets/News1.html
+++ b/assets/News1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>News article 1</title>
-    <link rel="stylesheet" type="text/css" href="css/news-style.css">
+    <link rel="stylesheet" type="text/css" href="../css/news-style.css">
 </head>
 <body>
 <main>
