--- a/assets/course-accordion.html
+++ b/assets/course-accordion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>RGU CSDM</title>
-    <link rel="stylesheet" type="text/css" href="css/course-style.css">
+    <link rel="stylesheet" type="text/css" href="../css/course-style.css">
 
 </head>
 <body>
@@ -56,6 +56,6 @@
 
 
 </section>
-<script type="text/javascript" src="js/accordion.js"></script>
+<script type="text/javascript" src="../js/accordion.js"></script>
 </body>
 </html>
