--- a/assets/courses-template.html
+++ b/assets/courses-template.html
@@ -21,7 +21,7 @@
             <p class="info"><!--First Paragraph--><br/><br/><!--Second Paragraph--></p>
 
 
-            <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-#" class="video-link" src="images/#-video.jpg" alt="Link to course video"></a>
+            <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-#" class="video-link" src="../images#-video.jpg" alt="Link to course video"></a>
 
             <div id="modal-#" class="modal">
 
