--- a/assets/courses-undergrad.html
+++ b/assets/courses-undergrad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>RGU CSDM</title>
-    <link rel="stylesheet" type="text/css" href="css/course-style.css">
+    <link rel="stylesheet" type="text/css" href="../css/course-style.css">
 </head>
 <body>
 <header>
@@ -31,7 +31,7 @@
                 <p class="info">This course aims to equip students to work as professional engineers and consultants in the design, configuration and management of computer networks.<br/><br/>The course format has been designed to meet the requirements of applicants who already possess an appropriate HND, by providing a two-year top-up programme leading to an honours degree.</p>
 
 
-                <a href="javascript:void(0)" onclick="openModal('modal-network');"><img id="img-network" class="video-link" src="images/network-video.jpg" alt="Link to course video"></a>
+                <a href="javascript:void(0)" onclick="openModal('modal-network');"><img id="img-network" class="video-link" src="../images/network-video.jpg" alt="Link to course video"></a>
 
                 <div id="modal-network" class="modal">
 
@@ -73,7 +73,7 @@
                 <p class="info">Our Computer Science degree provides you with a balance of knowledge and skills to design and implement software systems to the high professional standards demanded by industry.<br/><br/>In this course, you will study object-orientated softwre design, learn system development skills and how to apply them in practice. The course is designe to equip you for a career at the cutting edge of developments in software and information technologies.</p>
 
 
-                <a href="javascript:void(0)" onclick="openModal('modal-cs');"><img id="img-cs" class="video-link" src="images/cs-video.jpg" alt="Link to course video"></a>
+                <a href="javascript:void(0)" onclick="openModal('modal-cs');"><img id="img-cs" class="video-link" src="../images/cs-video.jpg" alt="Link to course video"></a>
 
                 <div id="modal-cs" class="modal">
 
@@ -113,13 +113,13 @@
                 <p class="info">This course will extend your existing skills in software and systems development, and equip you with advanced skills in web and mobile developments.<br/><br/>This course has been designed to meet the requirements of applicants whoo have completed a relevant HND in Computing, by providing s two-year top-up programme leading to an Honours degree.</p>
 
 
-                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-asd" class="video-link" src="images/RGULogo.png" alt="Link to course video"></a>
+                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-asd" class="video-link" src="../images/RGULogo.png" alt="Link to course video"></a>
 
                 <div id="modal-asd" class="modal">
 
                     <div class="modal-content">
                         <span class="close">x</span>
-                        <img class="course-video" width="615" height="435" src="images/video_unavailable.png">
+                        <img class="course-video" width="615" height="435" src="../images/video_unavailable.png">
                     </div>
 
                 </div>
@@ -152,13 +152,13 @@
                 <p class="info">Our Cyber Security degree provides you with the knowledge and skills to secure and protect critical information systems to the high professional standards demanded by industry.<br/><br/>You will study the different ways that computer siftware and hardware systems can be vunerable to attack and gain practical skills in how to defeat malicious threats.</p>
 
 
-                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-cyber" class="video-link" src="images/RGULogo.png" alt="Link to course video"></a>
+                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-cyber" class="video-link" src="../images/RGULogo.png" alt="Link to course video"></a>
 
                 <div id="modal-cyber" class="modal">
 
                     <div class="modal-content">
                         <span class="close">x</span>
-                        <img class="course-video" width="615" height="435" src="images/video_unavailable.png">
+                        <img class="course-video" width="615" height="435" src="../images/video_unavailable.png">
                     </div>
 
                 </div>
@@ -191,7 +191,7 @@
                 <p class="info">Bringing design, production and development together in the world of Digital Media provides an exciting future for graduates with this degree.<br/><br/>Combining creative design skills with a high level of technical ability ensures that employers are gaining the gradutes they require to take their companies to the next level.</p>
 
 
-                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-dm" class="video-link" src="images/digital-media.jpg" alt="Link to course video"></a>
+                <a href="javascript:void(0)" onclick="openModal('modal-#');"><img id="img-dm" class="video-link" src="../images/digital-media.jpg" alt="Link to course video"></a>
 
                 <div id="modal-dm" class="modal">
 
@@ -233,8 +233,8 @@
     <!-- Footer -->
 </footer>
 
-<script type="text/javascript" src="js/accordion.js"></script>
-<script type="text/javascript" src="js/modal-function.js"></script>
+<script type="text/javascript" src="../js/accordion.js"></script>
+<script type="text/javascript" src="../js/modal-function.js"></script>
 
 </body>
 </html>
