--- a/assets/News4.html
+++ b/assets/News4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>News article 4</title>
-    <link rel="stylesheet" type="text/css" href="css/News4-style.css">
+    <link rel="stylesheet" type="text/css" href="../css/News4-style.css">
 </head>
 <body>
 <main>
