--- a/assets/nav.html
+++ b/assets/nav.html
@@ -4,21 +4,21 @@
     <title>
         RGU CSDM
     </title>
-    <link rel="stylesheet" type="text/css" href="css/nav-style.css">
+    <link rel="stylesheet" type="text/css" href="../css/nav-style.css">
 </head>
 <body>
 <header>
     <section class="banner">
         <!--<img id="rgu-img" src="rgu-banner.jpg" width="1200" height="444">-->
 
-        <img id="school-title" src="images/schooltitle-white.png" width="1098" height="69">
-        <img id="logo" src="images/rgulogo-white.png" width="500" height="98">
+        <img id="school-title" src="../images/schooltitle-white.png" width="1098" height="69">
+        <img id="logo" src="../images/rgulogo-white.png" width="500" height="98">
 
     </section>
 
     <nav id="nav">
         <div id="home" class="icon">
-            <a href="index.html" id="home-link"><img id="home-icon" src="images/home-icon.png" alt="home link" height="20" width="20"></a>
+            <a href="../index.html" id="home-link"><img id="home-icon" src="../images/home-icon.png" alt="home link" height="20" width="20"></a>
         </div>
         <ul class="menu" id="navigation">
             <span href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</span>
@@ -81,7 +81,7 @@
 <section>
     <!--<span id="open-nav"  onclick="openNav()">&#9776;open</span>-->
 </section>
-<script type="text/javascript" src="js/nav.js"></script>
+<script type="text/javascript" src="../js/nav.js"></script>
 
 </body>
 </html>
