--- a/assets/placement_main.html
+++ b/assets/placement_main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Placement main</title>
-    <link type="text/css" rel="stylesheet" href="css/placement-style.css">
+    <link type="text/css" rel="stylesheet" href="../css/placement-style.css">
 </head>
 <body>
  <main>
@@ -19,12 +19,12 @@
     </section>
      </div>
      <section id="info">
-         <img id="graph" height="300" width="450" src="images/meta-chart.png">
+         <img id="graph" height="300" width="450" src="../images/meta-chart.png">
      <h3>Where are we?</h3>
      <p>The Placement Office for the Faculty of Design and Technology organises relevant opportunities for students who undertake a placement as part of the academic requirements of their course. We are located in Garthdee, in the small building next to Scott Sutherland School.</p>
      <p>The Office is open Monday to Thursday 09.00-17.00 and Friday 09.00-16.00. You can contact us by dropping in to the Office or by email to placement.destech@rgu.ac.uk or by phoning 01224 262344/ 262335/ 262433.</p>
      </section>
-     <script src="js/slideshow.js" type="text/javascript"></script>
+     <script src="../js/slideshow.js" type="text/javascript"></script>
  </main>
 </body>
 </html>
